--- a/gerando inteligencia a partir do Big Data/teste02.ipynb
+++ b/gerando inteligencia a partir do Big Data/teste02.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O resutado da multiplicação de 3 por 5 é 15.0\n"
+     ]
+    }
+   ],
    "source": [
     "operacao = \" \"\n",
     "\n",
@@ -39,22 +47,22 @@
     "    if operacao == 'Adição':\n",
     "        numero1 = input('Digite o primeiro número: ')\n",
     "        numero2 = input('Digite o segundo número: ')\n",
-    "        print('O resutado da adição de ' + numero1 +'com' + numero2 + 'é' + str(adicao(float(numero1), float(numero2))))\n",
+    "        print('O resutado da adição de ' + numero1 +' com ' + numero2 + ' é ' + str(adicao(float(numero1), float(numero2))))\n",
     "        \n",
     "    elif operacao =='Subtração':\n",
     "        numero1 = input('Digite o primeiro número: ')\n",
     "        numero2 = input('Digite o segundo número: ')\n",
-    "        print('O resutado da subtração de ' + numero1 +'por' + numero2 + 'é' + str(subtracao(float(numero1), float(numero2))))\n",
+    "        print('O resutado da subtração de ' + numero1 +' por ' + numero2 + ' é ' + str(subtracao(float(numero1), float(numero2))))\n",
     "        \n",
     "    elif operacao == 'Multiplicação':\n",
     "        numero1 = input('Digite o primeiro número: ')\n",
     "        numero2 = input('Digite o segundo número: ')\n",
-    "        print('O resutado da multiplicação de ' + numero1 +'por' + numero2 + 'é' + str(multiplicacao(float(numero1), float(numero2))))\n",
+    "        print('O resutado da multiplicação de ' + numero1 +' por ' + numero2 + ' é ' + str(multiplicacao(float(numero1), float(numero2))))\n",
     "        \n",
     "    elif operacao == \"Divisão\":\n",
     "        numero1 = input('Digite o primeiro número: ')\n",
     "        numero2 = input('Digite o segundo número: ')\n",
-    "        print('O resutado da divisão de ' + numero1 +'por' + numero2 + 'é' + str(divisao(float(numero1), float(numero2))))\n",
+    "        print('O resutado da divisão de ' + numero1 +' por ' + numero2 + ' é ' + str(divisao(float(numero1), float(numero2))))\n",
     "        \n",
     "    else:\n",
     "        print('Essa não é uma operação válida. Tente novamente.')"
